# JSOS-HT

./: .coderabbit.yaml  .gitignore  CLAUDE.md  HT_SC.bat  HT_SC_WT.bat  README.md  main.py  pyproject.toml  ruff.toml  run.sh  test_hook.py
db/: __init__.py  bulk_import.py  constants.py  excel_sync.py  helpers.py  import_parsed.py  import_record.py  import_whatsapp.py  queries.py  sync_record_2026.py  write_excel_from_db.py
monitor_v2/: DOC_monitor_v2.txt  config.js  index.js  package.json  دليل_المراقب.txt
monitor_v2/core/: fingerprint.js  parser.js  shift.js  validator.js
monitor_v2/orchestrator/: watcher.js
monitor_v2/storage/: db.js  excel-writer.js  shared-db.js  violation-store.js
monitor_v2/transport/: browser.js  screen-reader.js  session.js
monitor_v2/utils/: human-behavior.js  logger.js  state.js
scripts/: __init__.py  analyze_logs.py  common.py  db_tool.py  file_manager.py  generate_call_graph.py  logger_config.py  monitor_tool.py  monitor_v2_tool.py  process.py  report_builder_new.py  report_charts.py  report_interactive.py  report_pdf.py  reports_generator.py
scripts/preprocess/: __init__.py  config.py
tests/: conftest.py  test_common.py  test_db.py  test_process.py
